@@ -382,7 +382,7 @@ def generate(env):
     env['SHCCFLAGS']  = '$CCFLAGS'
     env['SHCCCOM']    = '$SHCC $SHCCFLAGS $CCCOMFLAGS'
     env['CXX']        = '$CC'
-    env['CXXFLAGS']   = '$CCFLAGS'
+    env['CXXFLAGS']   = '$CCFLAGS $( /TP $)'
     env['CXXCOM']     = '$CXX $CXXFLAGS $CCCOMFLAGS'
     env['SHCXX']      = '$CXX'
     env['SHCXXFLAGS'] = '$CXXFLAGS'
