@@ -74,6 +74,9 @@ RELEASE 0.XX - XXX
 
   - Remove the internal (and superfluous) SCons.Util.argmunge() function.
 
+  - Add /TP to the default CXXFLAGS for msvc, so it can compile all
+    of the suffixes we use as C++ files.
+
   From Gary Oberbrunner:
 
   - Report the target being built in error messages when building
